--- a/pages/index.html
+++ b/pages/index.html
@@ -32,13 +32,19 @@
                         <h3 class="header_content">Selecionar Setor</h3>
                         <img src="/img/Arrow 2.png" alt="" class="ss_img">
                     </div>
-                    <ul class="companies_list flex">
-                        <li class="companie">
-                            <h4 class="companie_title">Nome da Empresa</h4>
-                            <p class="companie_timer">10 Horas</p>
-                            <p class="companie_section">sessão</p>
-                        </li>
-                    </ul>
+                    <div class="filter-container">
+                        <ul class="filters">
+                            <li class="filter_button">Alimenticio</li>
+                            <li class="filter_button">Varejo</li>
+                            <li class="filter_button">Textil</li>
+                            <li class="filter_button">Manufatura</li>
+                            <li class="filter_button">Aeroespacial</li>
+                            <li class="filter_button">Automotiva</li>
+                            <li class="filter_button">TI</li>
+                            <li class="filter_button">Atacado</li>
+                        </ul>
+                    </div>     
+                    <ul class="companies_list flex" id="companieContainer"></ul>
                 </div>
             </div>
         </main>
