--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -33,7 +33,7 @@
                 <input type="email" class="email" id="email" placeholder="Seu e-mail" required>
                 <input type="password" class="password" id="password" placeholder="Sua senha" required>
                 <select name="stack" id="professional_level" class="stacks" required>
-                    <option value="nivelProfissional">Nível Profissional</option>
+                    <option value="">Nível Profissional</option>
                     <option value="junior">Junior</option>
                     <option value="pleno"> Pleno</option>
                     <option value="senior">Senior</option>
