--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -36,7 +36,7 @@
                     <option value="">Nível Profissional</option>
                     <option value="junior">Junior</option>
                     <option value="pleno"> Pleno</option>
-                    <option value="senior">Senior</option>
+                    <option value="sênior">Senior</option>
                 </select>
             </div>
             <div class="buttons-container">
