--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styles/globalStyles.css">
     <link rel="stylesheet" href="/styles/inputs.css">
     <link rel="stylesheet" href="/styles/buttons.css">
+    <link rel="stylesheet" href="/styles/toast.css">
     <link rel="stylesheet" href="index.css">
     <title>Kenzie Empresas - Login Page</title>
 </head>
@@ -18,11 +19,11 @@
             <span class="logo_img"></span>
             <h1 class="page_logo">Kenzie Empresas</h1>
         </div>
-        <div class="buttons-header a-center">
-            <img src="/img/Vector.png" alt="">
+        <div class="drop-down-container a-center">
+            <img src="/img/Vector.png" alt="" class="dropdown_img">
         </div>
     </header>
-    <main class="main-container">
+    <main class="main-container flex">
         <form class="login-container">
             <div class="login_header">
                 <h3 class="login_title">Login</h3>
