--- a/pages/user/index.html
+++ b/pages/user/index.html
@@ -32,7 +32,12 @@
             </ul>
         </section>
         <section class="company-container">
-            <ul class="coworkers-list flex f-wrap j-around"></ul>
+            <div class="company_header flex a-center j-center">
+                <h4 class="company_name"></h4>
+                <div class="separator"></div>
+                <h4 class="departament_name"></h4>
+            </div>
+            <ul class="coworkers-list flex f-wrap j-around f-wrap"></ul>
         </section>
     </main>
     <script type="module" src="index.js"></script>
