--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/globalStyles.css">
     <link rel="stylesheet" href="/styles/displays.css">
-    <link rel="stylesheet" href="/styles/inputs.css">
     <link rel="stylesheet" href="/styles/containers.css">
+    <link rel="stylesheet" href="/styles/globalStyles.css">
+    <link rel="stylesheet" href="/styles/inputs.css">
     <link rel="stylesheet" href="/styles/buttons.css">
+    <link rel="stylesheet" href="/styles/toast.css">
     <link rel="stylesheet" href="index.css">
     <title>Kenzie Empresas - Cadastro</title>
 </head>
@@ -19,7 +20,7 @@
             <h1 class="page_logo">Kenzie Empresas</h1>
         </div>
         <div class="buttons-header a-center">
-            <img src="/img/Vector.png" alt="">
+            <img src="/img/Vector.png" alt="" class="dropdown_img">
         </div>
     </header>
     <main class="main-container">
